# asyncio-best-practices

./: pyproject.toml  utils.py
aiohttp_webserver/: index.html  main.py  main_websockets.py  utils.py  views.py
aiohttp_x/: __init__.py  as_completed.py  async_socket.py  gather.py  wait.py
async_pg/: async_gen.py  main.py  services.py  settings.py
multiproc/: async_processpool.py  asyncpg_loop_multproc_pool.py  pools.py  process.py
sockets/: sockets_1.py  sockets_2.py  util_selectors.py
streams/: chat.py  server.py  stream_reader.py
threads+asyncio/: hashlib+threads.py  lock+threads.py  threadspool.py  threds+sockets.py
tkinter+asyncio/send_requests+GUI/: eventloop.py  loadtester.py  stresstest.py
